# yabool

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  Makefile.am  Makefile.in  README.md  bool.h  compile_cmake.sh  config.status  configure  configure.ac  configure.ac~  configure~  meson.build  yabool.h  yabool.pc  yabool.pc.in  yaboolConfig.cmake.in
docs/html/: LICENSE_8md.html  globals_defs.html  graph_legend.html  md_LICENSE.html  yabool_8h.html
docs/html/search/: defines_0.js  typedefs_0.js
doxygen-doc/html/: README_8md.html  files.html  globals_func.html  pages.html  yabool_8h__incl.md5
doxygen-doc/html/search/: all_2.js  files_2.js  functions_0.js  pages_1.js
doxygen-doc/latex/: index.tex  md_LICENSE.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  yabool_8h.tex  yabool_8h__incl.md5
html/: globals.html  globals_type.html  index.html  md_README.html  menudata.js  yabool_8h__incl.map  yabool_8h_source.html
html/search/: all_0.js  searchdata.js
latex/: files.tex  md_README.tex  yabool_8h.tex  yabool_8h_source.tex
